API for listing users/members in admin panel made
