# src/routes/admin/adminRoutes.js
@@ -6,4 +6,6 @@ const router = express.Router();
 
 router.post('/create-service-category',adminController.createServiceCategory);
 
+router.get('/list-members',adminController.listUsers);
+
 module.exports = router;
